--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </header>
 
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -48,7 +48,85 @@
                 <a href="https://github.com/joaopborba"><i class="fab fa-github-square"></i></a>
                 <a href="https://twitter.com/joaopborba95"><i class="fab fa-twitter-square"></i></a>
             </div>
-        </div>
+        </aside>
+
+        <section class="secao-conhecimentos">
+            <div class="secao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab  fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus nobis provident quod! 
+                        enim, sit rem veniam incidunt sint cupiditate ex ipsum dolorum dolor tempore
+                         delectus assumenda recusandae asperiores numquam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus nobis provident quod! 
+                        enim, sit rem veniam incidunt sint cupiditate ex ipsum dolorum dolor tempore
+                         delectus assumenda recusandae asperiores numquam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus nobis provident quod! 
+                        enim, sit rem veniam incidunt sint cupiditate ex ipsum dolorum dolor tempore
+                         delectus assumenda recusandae asperiores numquam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>JavaScript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus nobis provident quod! 
+                        enim, sit rem veniam incidunt sint cupiditate ex ipsum dolorum dolor tempore
+                         delectus assumenda recusandae asperiores numquam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus nobis provident quod! 
+                        enim, sit rem veniam incidunt sint cupiditate ex ipsum dolorum dolor tempore
+                         delectus assumenda recusandae asperiores numquam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Github</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus nobis provident quod! 
+                        enim, sit rem veniam incidunt sint cupiditate ex ipsum dolorum dolor tempore
+                         delectus assumenda recusandae asperiores numquam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento-img-wrapper">
+                    <img src="./imagens/113b4515-7c0f-49b3-8127-333074e182e3.jpg" alt="imagem conhecimento">
+                </div>
+            </div>
+        </section>
+
     </div>
 
 </body>
